@@ -1,3 +1,8 @@
+2018-02-01         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* Makefile.am (AWK): Move LANGUAGE= to here instead of
+	having it in individual tests.
+
 2018-01-24         John E. Malmberg      <wb8tyw@qsl.net>
 
 	* lintold.awk: Minor change to allow test to run on
